# ManagedIdentityWithC

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: containerimage.yml
app/: CMakeLists.txt
app/src/: main.c
deploy/: deploy.bicep  deploy.generated.json  pgAdmin.bicep
lib/: CMakeLists.txt
lib/include/: msi_auth_lib.h
lib/src/: msi_auth_lib.cpp
